deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  labels:
    name: backend
spec:
  ports:
    - nodePort: 30164 
      port: 8080      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: backend
  type: LoadBalancer       

---
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: backend
spec:                
  selector:         
    matchLabels:
      app: backend
  replicas: 1      
  template:
    metadata:
      labels:        
        app: backend
    spec:
      containers:
        - name: backend
          image: kostafortumanov/kiii-project
          ports:
            - containerPort: 8080
