postgres-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: app-db
  labels:
    app: app-db
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: app-db
    tier: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-db
  labels:
    app: app-db
    tier: database
spec:
  selector:
    matchLabels:
      app: app-db
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-db
        tier: database
    spec:
      containers:
        - image: postgres:13.1-alpine
          name: app-db
          ports:
            - containerPort: 5432
              name: app-db
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/posgresql/data.
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
